--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,8 @@ on:
 
 jobs:
     deploy-development:
+        name: Deploy to Development
+        if: github.event.ref == 'refs/heads/dev'
         runs-on: ubuntu-latest
         environment: development
         steps:
@@ -16,6 +18,8 @@ jobs:
                 temp=$(echo "${{ secrets.TestSecret }}" | base64)
                 echo "🔎 The secret for development is $temp"
     deploy-staging:
+        name: Deploy to Staging
+        if: github.event.ref == 'refs/heads/main'
         runs-on: ubuntu-latest
         environment: staging
         steps:
